--- a/back/package.json
+++ b/back/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
-    "init": "^0.1.2"
+    "express": "^4.18.2",
+    "init": "^0.1.2",
+    "pg": "^8.10.0",
+    "sequelize": "^6.29.1"
   }
 }
