--- a/back/package.json
+++ b/back/package.json
@@ -2,6 +2,8 @@
   "dependencies": {
     "axios": "^1.3.4",
     "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "init": "^0.1.2",
     "jsonwebtoken": "^9.0.0",
