--- a/front/package.json
+++ b/front/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^10.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
     "redux": "^4.2.1",
