--- a/back/package.json
+++ b/back/package.json
@@ -7,6 +7,7 @@
     "express": "^4.18.2",
     "init": "^0.1.2",
     "jsonwebtoken": "^9.0.0",
+    "nodemailer": "^6.9.1",
     "nodemon": "^2.0.21",
     "pg": "^8.10.0",
     "sequelize": "^6.29.1"
