--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.12",
+    "@mui/x-data-grid": "^6.0.1",
     "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.3.4",
     "framer-motion": "^10.2.2",
