--- a/front/package.json
+++ b/front/package.json
@@ -17,6 +17,7 @@
     "@mui/x-data-grid": "^6.0.1",
     "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.3.4",
+    "cleave.js": "^1.6.0",
     "framer-motion": "^10.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
